springboot-helloworld/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: springboot-helloworld
  labels:
    app: springboot-helloworld
spec:
  containers:
    - name: springboot-helloworld
      image: quay.io/mransonwang/springboot-helloworld:v2.0
      ports:
        - containerPort: 8080
          name: hello
          protocol: TCP
