springboot-helloworld/springboot-helloworld.yaml
apiVersion: v1
kind: Pod
metadata:
  name: springboot-helloworld
  labels:
    app: springboot-helloworld
spec:
  containers:
    - name: springboot-helloworld
      image: quay.io/mransonwang/springboot-helloworld:v2.0
      ports:
        - containerPort: 8080
          name: hello
          protocol: TCP
kind: Service
metadata:
  name: springboot-helloworld
spec:
  selector:
    app: springboot-helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
