springboot-helloworld/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld
spec:
  selector:
    app: springboot-helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
