springboot-helloworld/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: springboot-helloworld
spec:
  to:
    kind: Service
    name: springboot-helloworld
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
